listo, solo me falta comentar codigo d cd archivo, buena practica m dijieron :)